# Jarvis

./: .env.example  .gitignore  AGENTS.md  README.md  check_env.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.agents/skills/jarvis-workflow/: SKILL.md
.claude/: settings.json
.claude/skills/jarvis-workflow/: SKILL.md
brain/: confirmation.py  dialogue.py  dialogue_service.py  draft_storage.py  events.py  router.py  routines.py  service.py  session_store.py  task_session.py  vision_contracts.py  vision_local.py
brain/prompts/: router_system.txt  vision_system.txt
config/: default.yaml  loader.py  local.yaml.example  schema.py
core/: event_bus.py  loop.py  state_machine.py
docs/research/: techenclair_jarvis_notes.md
ears/: audio_stream.py  events.py  service.py  stt.py  vad.py
hands/: browser_actions.py  capabilities.py  executor.py  inventory.py  local_actions.py  screenshot.py  service.py
observability/: logger.py
safety/: kill_switch.py
tests/unit/: test_audio_stream.py  test_brain_events.py  test_brain_service.py  test_browser_actions.py  test_capabilities.py  test_confirmation.py  test_confirmation_integration.py  test_dialogue.py  test_dialogue_service.py  test_draft_storage.py  test_ears_events.py  test_ears_service.py  test_event_bus.py  test_hands_executor.py  test_hands_service.py  test_homework_demo.py  test_inventory.py  test_kill_switch.py  test_loader.py  test_local_actions.py  test_logger.py  test_loop.py  test_router.py  test_router_prompt.py  test_routines.py  test_screenshot.py  test_session_store.py  test_smoke_local_action.py  test_state_machine.py  test_stt.py  test_task_session.py  test_vad.py  test_vision_contracts.py  test_vision_local.py  test_vision_prompt.py  test_voice_feedback.py  test_voice_service.py
tools/: __init__.py  smoke_local_action.py
voice/: feedback.py  piper.py  service.py
